# W2D-library

./: .gitignore  Cargo.toml  README.md  dockerfile  go.mod  main.go  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cmd/: .bash  run.sh
.github/workflows/: page.yml
public/: index.html
src/: .info.pkl  go.mod  lib-o.rs  lib.rs  main.go
src/backend/: main.go
src/backend/selfhost/: .gitignore  go.mod  main.go
src/backend/server/: go.mod  main.go
src/frontend/: index.html
src/frontend/js/: main.js
src/frontend/static/styles/: style.css
tmp/: set_up.sh
vercel/: dockerfile  vercel.json
wiki/: assets.md
